hw09/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment-library-service
  labels:
    app: hw-app-k8s-a

spec:
  replicas: 1
  selector:
    matchLabels:
      env: hw-library-service
  template:
    metadata:
      labels:
        env: hw-library-service
    spec:
      containers:
      - name: hw-09-library-service
        image: pisklovcor/hw-09-library-service-docker:dockerfile
        ports:
          - containerPort: 8000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: hw-postgres

spec:
  replicas: 1
  selector:
    matchLabels:
      env: postgres-app
  template:
    metadata:
      labels:
        env: postgres-app
    spec:
      containers:
        - name  : postgres-13
          image : postgres:13.3
          ports :
            - containerPort: 5432
