hw09/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-service-library

spec:
  selector:
    env: hw-library-service
  ports:
    - protocol  : TCP
      port      : 80
      targetPort: 8000
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-svc

spec:
  selector:
    env: postgres-app
  ports:
    - port      : 5432
      targetPort: 5432
